# assignment-compiler

LR-parser/: in  in2  main.c  main.y
final-term/compiler/: CMakeLists.txt  gen.c  gen.h  main.c  parse.y  semantic.c  y.tab.c
final-term/interpreter/: CMakeLists.txt  build.sh  interp.c  interp.l  interp.y  interpreter  lex.yy.c  lib.c  type.h  y.tab.c
mid-term/: CMakeLists.txt  lex.yy.c  main.c  my_printer.c  my_printer.h  parse.y  print_ast.c  scan.l  syntax.c  syntax.h  test1.c  test2.c  test3.c  type.h  y.tab.c  y.tab.h
